Fixed overscroll on safari 5. Cleaned up more css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Theme Name:     kindtech
 Description:    Child theme of Heavely WordPress theme.
@@ -7,7 +8,6 @@ Version:        2.0.0
 
 (optional values you can add: Theme URI, Author URI, Version)
 */
-
 @import url("../heavenly/style.css");
 @import url(http://fonts.googleapis.com/css?family=Prosto+One|Varela+Round|Satisfy);
 
@@ -65,7 +65,6 @@ p, .menu_link {
 
 #brand-img {
     width: 100%;
-    height: 200px;
 }
 
 .service-img {
@@ -80,16 +79,9 @@ p, .menu_link {
     position: relative;
     display: block;
     text-align: center;
-    top: 0;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-}
-
-#banner-header p {
-    text-align: center;
-    color: white;
-    font-size: 20px !important;
 }
 
 /* Main page and content containers
@@ -100,19 +92,17 @@ p, .menu_link {
     -moz-box-shadow:    3px 3px 1px 6px black;
     -webkit-box-shadow: 3px 3px 1px 6px black;
     box-shadow:         3px 3px 1px 6px black;
-    position: relative;
     background-color: white;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
     z-index: 1;
+    margin-top: 0 !important;
 }
 
 .content-container {
     position: relative;
     padding: 5px 15px 5px 15px;
-    width: 90%;
-    top: 20%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -261,8 +251,8 @@ a.content-link:visited {
 **/
 .footer-area {
     -moz-box-shadow:    1px 1px 1px 1px black;
-    -webkit-box-shadow: 1px 1px 1px 1px black;
     box-shadow:         1px 1px 1px 1px black;
+    -webkit-box-shadow: 1px 1px 1px 1px black;
     border-radius: 0 0 15px 15px;
     color: white;
     background-color: #444444;
@@ -323,9 +313,7 @@ a.content-link:visited {
     font-weight: bold;
     color: white;
 }
-.question-text:hover {
-    color: red;
-}
+
 #process-list .answer {
     display: none;
 }
@@ -594,5 +582,8 @@ MOBILE LAYOUTS
 @media (max-width: 325px) {
     #search-form {
         display: none;
+    }
+    .footer-nav {
+        display:none;
     }
 }
